Mon Jun 13 20:01:44 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.model/model/Topics.ecore_diagram:

          Added missing element defined outside of Topics.ecore
          to the diagram.

Mon Jun 13 19:54:55 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS.ecore:

          Removed profile-driven inheritance from domain, topic, and policies
          (policy classes starting with lower-case character) to minimize
          multiple inheritance which does not map well to XSD. The profile
          driven inheritance wasn't adding any members anyway.

        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:

          Additions of notationViewFactoryClassName attributes due to
          OpenDDS.ecore changes.

Fri Jun 10 23:25:44 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/traits_cpp.xsl:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/traits_h.xsl:
          make destructor virtual


Fri Jun 10 19:36:23 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.gmf/templates/aspects/parsers/PredefinedParser.xpt:

          Generate code allowing infinity to be specified and displayed
          for ELong types to support infinite duration for QoS policy
          periods.

Thu Jun  9 22:06:02 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/scripts/dds_fuzz.pl:

          New script that runs fuzz.pl (from ACE) passing in the list of tests
          that are applicable to OpenDDS.  Try running with -m to check only
          svn added or modified files.

Thu Jun  9 19:34:29 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.model/model/Topics.ecore_diagram:

          Update to include DomainEntity and class attributes.
